--- a/templates/base.html
+++ b/templates/base.html
@@ -1,40 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--   <link rel="icon" href="/static/assets/favicon.ico" type="image/x-icon"> -->
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  
-  <title>
-    Flask - {% block title %}{% endblock %} | Aarohi
-  </title> 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-  {% block stylesheets %}{% endblock stylesheets %}
+    <title>Flask - {% block title %}{% endblock %} | Aarohi</title>
 
-</head>
-<body class="hold-transition {% block body_class %}{% endblock body_class %}">
-<div class="wrapper">
+    {% block stylesheets %}{% endblock stylesheets %}
+  </head>
+  <header>
+    <div class="container">
+      <header
+        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+      >
+        <div class="col-md-3 mb-2 mb-md-0">
+          <a
+            href="/"
+            class="d-inline-flex link-body-emphasis text-decoration-none"
+          >
+            <svg
+              class="bi"
+              width="40"
+              height="32"
+              role="img"
+              aria-label="Bootstrap"
+            >
+              <use xlink:href="#bootstrap" />
+            </svg>
+          </a>
+        </div>
 
-    {% include 'navigation.html' %}
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+          <li><a href="#" class="nav-link px-2">Features</a></li>
+          <li><a href="#" class="nav-link px-2">Pricing</a></li>
+          <li><a href="#" class="nav-link px-2">FAQs</a></li>
+          <li><a href="#" class="nav-link px-2">About</a></li>
+        </ul>
 
-    {% include 'sidebar.html' %}
+        <div class="col-md-3 text-end">
+          <button type="button" class="btn btn-outline-primary me-2">
+            Login
+          </button>
+          <button type="button" class="btn btn-primary">Sign-up</button>
+        </div>
+      </header>
+    </div>
+  </header>
 
-    {% block content %}{% endblock content %}
+  <body class="hold-transition {% block body_class %}{% endblock body_class %}">
+    <div class="wrapper">
+      {% include 'navigation.html' %} {% include 'sidebar.html' %} {% block
+      content %}{% endblock content %} {% include 'footer.html' %}
 
-    {% include 'footer.html' %}
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
+      <!-- Control Sidebar -->
+      <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+      </aside>
+      <!-- /.control-sidebar -->
+    </div>
+    <!-- ./wrapper -->
 
-</div>
-<!-- ./wrapper -->
+    <!-- Specific Page JS goes HERE  -->
+    {% block javascripts %}{% endblock javascripts %}
 
-<!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
-
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
