--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,10 @@
-  <!-- /.content-wrapper -->
-  <footer class="main-footer">
-    &copy; <a target="_blank" rel="noopener noreferrer" href="#">Vilmar Prestes</a>
-    - coded by <a target="_blank" rel="noopener noreferrer" href="#">Aarohi Singla</a>
-    - adpted by <a target="_blank" rel="noopener noreferrer" href="#">Vilmar Prestes</a>
-    <div class="float-right d-none d-sm-inline-block">
-    </div>
-  </footer>
+<!-- /.content-wrapper -->
+<footer class="main-footer">
+  &copy;
+  <a target="_blank" rel="noopener noreferrer" href="#">Vilmar Prestes</a> -
+  coded by
+  <a target="_blank" rel="noopener noreferrer" href="#">Aarohi Singla</a> -
+  adapted by
+  <a target="_blank" rel="noopener noreferrer" href="#">Vilmar Prestes</a>
+  <div class="float-right d-none d-sm-inline-block"></div>
+</footer>
