--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0 text-dark">Esporte Inteligente - Programa Capacitação 4.0 CEIA/EMBRAPII</h1>
+            <h1 class="m-0 text-dark">ZScan Software - AI Object Detection</h1>
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
