--- a/templates/index.html
+++ b/templates/index.html
@@ -1,55 +1,64 @@
-{% extends "base.html" %}
-
-{% block title %} Dashboard {% endblock %} 
-
-<!-- Element injected in the BODY element -->
-{% block body_class %} sidebar-mini {% endblock body_class %} 
+{% extends "base.html" %} {% block title %} Polyp Detection {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
-
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="/static/assets/plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="/static/assets/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="/static/assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="/static/assets/plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="/static/assets/css/adminlte.min.css">
-  <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="/static/assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="/static/assets/plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="/static/assets/plugins/summernote/summernote-bs4.min.css">
-
-{% endblock stylesheets %}
-
-{% block content %}
-  
-  <div class="content-wrapper">
-
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1 class="m-0 text-dark">ZScan Software - AI Object Detection</h1>
-          </div><!-- /.col -->
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-              <li class="breadcrumb-item active">View Detected Image</li>
-            </ol>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /.container-fluid -->
+<!-- Google Font: Source Sans Pro -->
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
+/>
+<!-- Font Awesome -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/fontawesome-free/css/all.min.css"
+/>
+<!-- Ionicons -->
+<link
+  rel="stylesheet"
+  href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+/>
+<!-- Tempusdominus Bootstrap 4 -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
+/>
+<!-- iCheck -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css"
+/>
+<!-- JQVMap -->
+<link rel="stylesheet" href="/static/assets/plugins/jqvmap/jqvmap.min.css" />
+<!-- Theme style -->
+<link rel="stylesheet" href="/static/assets/css/adminlte.min.css" />
+<!-- overlayScrollbars -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
+/>
+<!-- Daterange picker -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/daterangepicker/daterangepicker.css"
+/>
+<!-- summernote -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/summernote/summernote-bs4.min.css"
+/>
+<link rel="stylesheet" href="/static/assets/css/overwrite.css" />
+{% endblock stylesheets %} {% block content %}
+<div class="content-wrapper">
+  <!-- Content Header (Page header) -->
+  <div class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1 class="m-0 text-dark main-title">ZScan - Polyp Detection</h1>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container-fluid -->
     </div>
     <!-- /.content-header -->
 
@@ -57,139 +66,89 @@
     <section class="content">
       <div class="container-fluid">
         <!-- Small boxes (Stat box) -->
-         <div class="row">
-       
+        <div class="row">
           <!-- ./col -->
         </div>
-        
-		<!-- /.row -->
+        <!-- /.row -->
+
         <!-- Main row -->
         <div class="row">
           <!-- Left col -->
-          <section class="col-lg-6 connectedSortable">
+          <section class="col-lg connectedSortable">
             <!-- Custom tabs (Charts with tabs)-->
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">
+                <h2 class="card-title">
                   <i class="fas fa-chart-pie mr-1"></i>
                   YOLOv9 Object Detection
-                </h3>
-				
-                
-              </div><!-- /.card-header -->
+                </h2>
+              </div>
+              <!-- /.card-header -->
               <div class="card-body">
                 <div class="tab-content p-0">
-                  <!-- Morris chart - Sales -->
-                  <div class="chart tab-pane active" id="revenue-chart"
-                        style="position: relative; height: 700px;">
-            
-			<!-- AI code-->
-				 
-				   <form class="form-signin col-lg-3" method=post enctype=multipart/form-data name="form1">
-       
-        <h1 class="h3 mb-3 font-weight-normal">Upload any image or video</h1>
-     <input type="file" name="file" class="form-control-file" id="inputfile" >
-
-        <br/>
-		    
-        <button class="btn btn-block btn-default btn-sm " type="submit">Upload</button>
-  <p class="mt-5 mb-3 text-muted">Built using Pytorch & Flask</p>
-    </form>
-
-	
-	
-	
-
-                 
-                </div>
-              </div><!-- /.card-body -->
-            </div>
-            <!-- /.card -->
-
-            
-      
-          </section>
-		  
-		  
-		            <section class="col-lg-6 connectedSortable">
-            <!-- Custom tabs (Charts with tabs)-->
-            <div class="card">
-              <div class="card-header">
-                <h3 class="card-title">
-                  <i class="fas fa-chart-pie mr-1"></i>
-                  YOLOv9 Object Detection Results
-                </h3>
-				
-                
-              </div><!-- /.card-header -->
-              <div class="card-body">
-                <div class="tab-content p-0">
-                  <!-- Morris chart - Sales -->
-                  <div class="chart tab-pane active" id="revenue-chart"
-                        style="position: relative; height: 700px;">
-            
-			<!-- AI code-->
-
-
-
-<!-- detected image display -->
-<img id="my-image"  src="{{ url_for('predict_img', filename=image_path) }}" style="height:640; width:640px; display: none;"/> 
-
-<script>
-document.getElementById("my-image").onload = function() {
-  this.style.display = "block";
-};
-</script>
-
-<!-- detected video display using opencv-->
-<img id="my-video-image" src="{{ url_for('video_feed') }}" style="height:640; width:640px; display: none;" />
-
-<script>
-document.getElementById("my-video-image").onload = function() {
-  this.style.display = "block";
-};
-</script>
-
-
-<!-- AI code ends here-->		
-
+                  <!-- Chart -->
+                  <div
+                    class="chart tab-pane active"
+                    id="revenue-chart"
+                    style="position: relative"
+                  >
+                    <!-- AI code-->
+                    <form
+                      class="form-signin col-lg-12 form-layout"
+                      method="post"
+                      enctype="multipart/form-data"
+                      name="form1"
+                    >
+                      <h3 class="upload-text mb-3 font-weight-normal">
+                        Upload any image or video
+                      </h3>
+                      <input
+                        type="file"
+                        name="file"
+                        class="form-control-file"
+                        id="inputfile"
+                      />
+                      <br />
+                      <button
+                        class="btn btn-block btn-default btn-sm"
+                        type="submit"
+                        id="upload-button"
+                        onclick="showMessage(); updateButton()"
+                      >
+                        Upload
+                      </button>
+                    </form>
+                    <div id="wait-message">
+                      <p>Inferencia em curso. Aguarde...</p>
                     </div>
-                 
+                    <!-- AI code ends here-->
+                  </div>
                 </div>
-              </div><!-- /.card-body -->
+                <!-- /.tab-content -->
+              </div>
+              <!-- /.card-body -->
             </div>
             <!-- /.card -->
-
-            
-      
           </section>
-		  
-		  
-		  
           <!-- /.Left col -->
-          <!-- right col (We are only adding the ID to make the widgets sortable)-->
-
-          <!-- right col -->
         </div>
         <!-- /.row (main row) -->
-      </div><!-- /.container-fluid -->
+      </div>
+      <!-- /.container-fluid -->
     </section>
     <!-- /.content -->
-
   </div>
+  {% endblock content %}
 
-{% endblock content %}
-
-<!-- Specific Page JS goes HERE  -->
-{% block javascripts %}
-
+  <!-- Specific Page JS goes HERE  -->
+  {% block javascripts %}
   <!-- jQuery -->
   <script src="/static/assets/plugins/jquery/jquery.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
   <script src="/static/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
   <script>
-    $.widget.bridge('uibutton', $.ui.button)
+    $.widget.bridge("uibutton", $.ui.button);
   </script>
   <!-- Bootstrap 4 -->
   <script src="/static/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -217,5 +176,18 @@ document.getElementById("my-video-image").onload = function() {
   <script src="/static/assets/js/pages/dashboard.js"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="/static/assets/js/demo.js"></script>
+  <script>
+    function showMessage() {
+      let element = document.getElementById("wait-message");
+      element.style.display = "block";
+    }
 
-{% endblock javascripts %}
+    function updateButton() {
+      let element = document.getElementById("upload-button");
+      element.style.color = "white";
+      element.innerHTML = "Uploaded";
+      element.style.backgroundColor = "green";
+    }
+  </script>
+  {% endblock javascripts %}
+</div>
