--- a/templates/index.html
+++ b/templates/index.html
@@ -100,13 +100,14 @@
                       name="form1"
                     >
                       <h3 class="upload-text mb-3 font-weight-normal">
-                        Upload any image or video
+                        Upload any image 
                       </h3>
                       <input
                         type="file"
                         name="file"
                         class="form-control-file"
                         id="inputfile"
+                        multiple
                       />
                       <br />
                       <button
